fix: change logo and select size on mobile

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,13 +1,20 @@
-.nav{
-    max-width: 1052px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+@use "../../mediaQueries" as m;
 
-    &__container{
-        padding: 1rem;
-        background-color: rgba(24, 24, 27, 0.2);
-        backdrop-filter: blur(4px);
+.nav {
+  max-width: 1052px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+
+  &__container {
+    padding: 1rem;
+    background-color: rgba(24, 24, 27, 0.2);
+    backdrop-filter: blur(4px);
+  }
+  @include m.small {
+    .logo {
+      width: 5rem;
     }
+  }
 }
