--- a/src/components/Select/select.scss
+++ b/src/components/Select/select.scss
@@ -1,7 +1,13 @@
+@use "../../mediaQueries" as m;
+
 .select {
   height: 40px;
   padding: 0px 1rem 0px 1.5rem;
   border-radius: 100vmax;
   background: transparent;
   color: var(--white);
+  @include m.small {
+    height: 36px;
+    padding: 0px 0.5rem 0px 1rem;
+  }
 }
