--- a/src/components/Service/service.scss
+++ b/src/components/Service/service.scss
@@ -1,3 +1,5 @@
+@use "../../mediaQueries" as m;
+
 .service {
   list-style: none;
   flex: 1 1 294px;
@@ -50,6 +52,14 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+  @include m.small {
+    &__img {
+      width: 82px;
+      img {
+        width: 3rem;
+      }
+    }
   }
 }
 
